# ISF

./: .gitignore  Readme.md
abc/: .hg_archival.txt  .readme.md.swp  Makefile  abc.rc  abclib.dsp  c6288.aig  c6288.script  crc.ps  readme.md
abc/src/aig/gia/: gia.h  giaAiger.c  giaDfs.c  giaDup.c  giaEdge.c  giaEsop.c  giaFadds.c  giaIf.c  giaMan.c  giaMuxes.c  giaNf.c  giaRex.c  giaSatEdge.c  giaSatLut.c  giaSatMap.c  giaShow.c  giaSweep.c  giaTim.c  giaTruth.c  giaUtil.c  module.make
abc/src/aig/miniaig/: abcapis.h
abc/src/base/abc/: abc.h  abcFunc.c  abcUtil.c
abc/src/base/abci/: abc.c  abcCollapse.c  abcDec.c  abcNpn.c  abcPrint.c  abcVerify.c
abc/src/base/cba/: cba.h  cbaNtk.c
abc/src/base/cmd/: cmdPlugin.c
abc/src/base/exor/: exor.c  exor.h  exorLink.c  exorList.c  exorUtil.c
abc/src/base/io/: io.c  ioAbc.h  ioReadPla.c  ioUtil.c
abc/src/base/main/: main.h  mainFrame.c  mainInit.c  mainInt.h
abc/src/base/pla/: plaCom.c
abc/src/base/wlc/: wlc.h  wlcBlast.c  wlcCom.c  wlcNtk.c  wlcReadSmt.c  wlcReadVer.c  wlcWriteVer.c
abc/src/eda/: eda.c  eda.h  edaCec.c  edaCreateFaultNode.c  edaHello.c  module.make
abc/src/map/mio/: mio.c  mio.h  mioApi.c  mioInt.h  mioRead.c  mioUtils.c
docs/: Case_01.tgz  Case_02.tgz  Case_03.tgz  Case_04.tgz  fault_description.txt
docs/Case_01/: design_01.bench
src/: CMakeLists.txt  Makefile
src/IFS/: CMakeLists.txt  ifs.cpp  ifs.h  myHash.cpp  myHash.h
src/circuit/: CMakeLists.txt  circuit.cpp  circuit.h  util.h
src/gate/: CMakeLists.txt  gate.cpp  gate.h
src/project/: CMakeLists.txt  ifs.cpp  main.cpp
(+17 files in other folders)
